--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,1 +1,73 @@
+span.loading {
+    display: inline-block;
+    white-space: nowrap;
+}
+    span.loading span {
+        display: inline-block;
+        vertical-align: middle;
+    }
+    span.loading span:nth-of-type(1) {
+        -webkit-animation: animation 2s ease 0s infinite;
+        animation: animation 2s ease 0s infinite;
+    }
+    span.loading span:nth-of-type(2) {
+        -webkit-animation: animation 2s ease 0.1s infinite;
+        animation: animation 2s ease 0.1s infinite;
+    }
+    span.loading span:nth-of-type(3) {
+        -webkit-animation: animation 2s ease 0.2s infinite;
+        animation: animation 2s ease 0.2s infinite;
+    }
+    span.loading span:nth-of-type(4) {
+        -webkit-animation: animation 2s ease 0.3s infinite;
+        animation: animation 2s ease 0.3s infinite;
+    }
+    span.loading span:nth-of-type(5) {
+        -webkit-animation: animation 2s ease 0.4s infinite;
+        animation: animation 2s ease 0.4s infinite;
+    }
+    span.loading span:nth-of-type(6) {
+        -webkit-animation: animation 2s ease 0.5s infinite;
+        animation: animation 2s ease 0.5s infinite;
+    }
+    span.loading span:nth-of-type(7) {
+        -webkit-animation: animation 2s ease 0.6s infinite;
+        animation: animation 2s ease 0.6s infinite;
+    }
+    span.loading span:nth-of-type(8) {
+        -webkit-animation: animation 2s ease 0.7s infinite;
+        animation: animation 2s ease 0.7s infinite;
+    }
+    span.loading span:nth-of-type(9) {
+       -webkit-animation: animation 2s ease 0.8s infinite;
+       animation: animation 2s ease 0.8s infinite;
+   }
+   span.loading span:nth-of-type(10) {
+      -webkit-animation: animation 2s ease 0.9s infinite;
+      animation: animation 2s ease 0.9s infinite;
+   }
+   span.loading span:nth-of-type(11) {
+      -webkit-animation: animation 2s ease 0.10s infinite;
+      animation: animation 2s ease 0.10s infinite;
+   }
+   span.loading span:nth-of-type(12) {
+       -webkit-animation: animation 2s ease 0.11s infinite;
+       animation: animation 2s ease 0.11s infinite;
+   }
+   span.loading span:nth-of-type(13) {
+       -webkit-animation: animation 2s ease 0.12s infinite;
+       animation: animation 2s ease 0.12s infinite;
+   }
+@-webkit-keyframes animation {
+    20% {
+        -webkit-text-shadow: rgba(0, 0, 0, 1) 5px 0 0;
+        color: transparent;
+    }
+}
 
+@keyframes animation {
+    20% {
+        text-shadow: rgba(0, 0, 0, 1) 5px 0 0;
+        color: transparent;
+    }
+}　
